--- a/index.html
+++ b/index.html
@@ -505,12 +505,7 @@
             <div class="header-content">
                 <div class="logo">
                     <!-- Logo SVG based on the turquoise brand -->
-                    <svg width="50" height="50" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect x="50" y="80" width="40" height="90" fill="#00b4d8" transform="rotate(-10 70 125)"/>
-                        <rect x="80" y="60" width="40" height="110" fill="#00b4d8" transform="rotate(-10 100 115)"/>
-                        <rect x="110" y="40" width="40" height="130" fill="#00b4d8" transform="rotate(-10 130 105)"/>
-                        <line x1="40" y1="170" x2="160" y2="170" stroke="#00b4d8" stroke-width="3"/>
-                    </svg>
+                    <img src="mariam.jpg" alt="Mariam Serhan" style="width:200px; height:200px; border-radius:50%; object-fit:cover;">
                     <div class="logo-text">1-800-NoFault</div>
                 </div>
                 <div class="header-cta">
