--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             <div class="header-content">
                 <div class="logo">
                     <!-- Logo SVG based on the turquoise brand -->
-                    <img src="mariam.jpg" alt="Mariam Serhan" style="width:200px; height:200px; border-radius:50%; object-fit:cover;">
+                    <img src="no.jpg" alt="Mariam Serhan" style="width:200px; height:200px; border-radius:50%; object-fit:cover;">
                     <div class="logo-text">1-800-NoFault</div>
                 </div>
                 <div class="header-cta">
