--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
 
         .logo-image {
-            height: 50px;
+            height: 70px;
             width: auto;
         }
 
@@ -496,6 +496,28 @@
         .whatsapp-float:hover {
             transform: scale(1.1);
         }
+
+        @media (max-width: 768px){
+  .logo-image{
+    height: 95px;
+    width: auto;
+  }
+
+  .authority-image-placeholder{
+    background: transparent !important;
+    border: 6px solid #00b4d8;
+    border-radius: 50%;
+    padding: 10px;
+    display: inline-block;
+  }
+
+  .authority-image-placeholder img{
+    width: 220px !important;
+    height: 220px !important;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+}
     </style>
 </head>
 <body>
