--- a/index.html
+++ b/index.html
@@ -523,12 +523,12 @@
 @media (max-width: 768px){
 
   /* LOGO maior no celular */
-  .logo img,
-  img.logo-image{
-    height: 110px !important;
+/* ===== LOGO MAIOR ===== */
+.logo img,
+img.logo-image{
+    height: 170px !important;
     width: auto !important;
-    max-width: 85vw !important;
-  }
+}
 
   /* Remove círculo/anel azul do container */
   .authority-image-placeholder{
