--- a/index.html
+++ b/index.html
@@ -589,9 +589,9 @@ img.logo-image{
         <div class="container">
             <div class="mobile-grid-fix">
                 <div style="text-align: center;">
-                    <div style="width: 250px; height: 250px; border-radius: 50%; background: linear-gradient(135deg, #caf0f8 0%, #ade8f4 100%); margin: 0 auto; display: flex; align-items: center; justify-content: center; border: 5px solid #00b4d8; box-shadow: 0 10px 30px rgba(0,180,216,0.2);">
-                        <img src="mariam.jpg" alt="Mariam Serhan" style="width:200px; height:200px; border-radius:50%; object-fit:cover;">
-                    </div>
+                    <div class="authority-photo">
+  <img src="mariam.jpg" alt="Mariam Serhan" class="authority-photo-img">
+</div>
                     <h3 style="margin-top: 20px; color: #023047; font-size: 24px; font-weight: 700;">Mariam Serhan</h3>
                     <p style="color: #00b4d8; font-size: 16px; font-weight: 600;">Assessora Pessoal</p>
                     <div style="margin-top: 15px; display: flex; gap: 10px; justify-content: center; font-size: 24px;">
